tests/buffer/errors/set_negative_offset.dby
import std.buffer as buf

let b = buf.new(3)
buf.set(b, -1, 255)
